--- a/my-api/package.json
+++ b/my-api/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "mysql": "^2.18.1",
+    "nodemon": "^3.1.10",
     "validator": "^13.15.15"
   }
 }
